update:comment CRUD and Docs
