# storage/api-docs/api-docs.json
@@ -123,26 +123,27 @@
                 ]
             }
         },
-        "/api/users/threads/{id}/comment": {
+        "/api/threads/{id}/comment": {
             "post": {
                 "tags": [
-                    "Threads"
+                    "Comments"
                 ],
-                "operationId": "e3f38f1e74274475744d33c9f89ab459",
+                "summary": "Add a comment to a thread",
+                "description": "Add a comment to a thread by its ID.",
+                "operationId": "6781b2c7085cc127e25884dda4a05524",
                 "parameters": [
                     {
                         "name": "id",
                         "in": "path",
-                        "description": "ID of the Thread to retrieve",
+                        "description": "ID of the thread to add a comment to",
                         "required": true,
                         "schema": {
-                            "type": "integer",
-                            "format": "int64"
+                            "type": "string"
                         }
                     }
                 ],
                 "requestBody": {
-                    "description": "Comment content",
+                    "description": "Comment data to add",
                     "required": true,
                     "content": {
                         "application/json": {
@@ -153,7 +154,7 @@
                                 "properties": {
                                     "content": {
                                         "type": "string",
-                                        "example": "This is the comment content."
+                                        "example": "This is a comment"
                                     }
                                 },
                                 "type": "object"
@@ -163,18 +164,168 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "This API is used to add a comment in the specific thread",
+                        "description": "Comment added successfully",
                         "content": {
                             "application/json": {
                                 "schema": {
                                     "properties": {
-                                        "status": {
-                                            "type": "string",
-                                            "example": "success"
-                                        },
                                         "message": {
                                             "type": "string",
-                                            "example": "Comment added successfully"
+                                            "example": "Comment Added"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Thread not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Thread not found"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/comments/{id}": {
+            "put": {
+                "tags": [
+                    "Comments"
+                ],
+                "summary": "Update a comment",
+                "description": "Update a comment by its ID.",
+                "operationId": "22f2fcd4f62e1592db784589dcce4c18",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the comment to update",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "description": "Updated comment data",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "content"
+                                ],
+                                "properties": {
+                                    "content": {
+                                        "type": "string",
+                                        "example": "Updated content"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Comment updated successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Comment Updated"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Comment not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Comment not found"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "Comments"
+                ],
+                "summary": "Delete a comment",
+                "description": "Delete a comment by its ID.",
+                "operationId": "a8ea731109c6fc2c7f011b794a69f056",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the comment to delete",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Comment deleted successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Comment deleted"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Comment not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Comment not found"
                                         }
                                     },
                                     "type": "object"
@@ -369,7 +520,7 @@
     },
     "tags": [
         {
-            "name": "Comment",
+            "name": "Comments",
             "description": "This is related to the threads"
         }
     ]
